@@ -1,26 +1,6 @@
 /*
  * Copyright (c) 2002, 2013, Oracle and/or its affiliates. All rights reserved.
  * ORACLE PROPRIETARY/CONFIDENTIAL. Use is subject to license terms.
- *
- *
- *
- *
- *
- *
- *
- *
- *
- *
- *
- *
- *
- *
- *
- *
- *
- *
- *
- *
  */
 
 package com.sun.corba.se.impl.orb;
@@ -115,33 +95,40 @@ public class ParserTable {
 		wrapper = ORBUtilSystemException.get(CORBALogDomains.ORB_LIFECYCLE);
 
 		String codeSetTestString = OSFCodeSetRegistry.ISO_8859_1_VALUE + ","
-				+ OSFCodeSetRegistry.UTF_16_VALUE + "," + OSFCodeSetRegistry.ISO_646_VALUE;
+				+ OSFCodeSetRegistry.UTF_16_VALUE + ","
+				+ OSFCodeSetRegistry.ISO_646_VALUE;
 
 		String[] debugTestData = { "subcontract", "poa", "transport" };
 
-		USLPort[] USLPorts = { new USLPort("FOO", 2701), new USLPort("BAR", 3333) };
+		USLPort[] USLPorts = { new USLPort("FOO", 2701), new USLPort("BAR",
+				3333) };
 
-		ReadTimeouts readTimeouts = TransportDefault.makeReadTimeoutsFactory().create(
-				ORBConstants.TRANSPORT_TCP_INITIAL_TIME_TO_WAIT,
-				ORBConstants.TRANSPORT_TCP_MAX_TIME_TO_WAIT,
-				ORBConstants.TRANSPORT_TCP_GIOP_HEADER_MAX_TIME_TO_WAIT,
-				ORBConstants.TRANSPORT_TCP_TIME_TO_WAIT_BACKOFF_FACTOR);
+		ReadTimeouts readTimeouts = TransportDefault.makeReadTimeoutsFactory()
+				.create(ORBConstants.TRANSPORT_TCP_INITIAL_TIME_TO_WAIT,
+						ORBConstants.TRANSPORT_TCP_MAX_TIME_TO_WAIT,
+						ORBConstants.TRANSPORT_TCP_GIOP_HEADER_MAX_TIME_TO_WAIT,
+						ORBConstants.TRANSPORT_TCP_TIME_TO_WAIT_BACKOFF_FACTOR);
 
-		ORBInitializer[] TestORBInitializers = { null, new TestORBInitializer1(),
-				new TestORBInitializer2() };
-		StringPair[] TestORBInitData = { new StringPair("foo.bar.blech.NonExistent", "dummy"),
-				new StringPair(MY_CLASS_NAME + "$TestORBInitializer1", "dummy"),
-				new StringPair(MY_CLASS_NAME + "$TestORBInitializer2", "dummy") };
+		ORBInitializer[] TestORBInitializers = { null,
+				new TestORBInitializer1(), new TestORBInitializer2() };
+		StringPair[] TestORBInitData = { new StringPair(
+				"foo.bar.blech.NonExistent", "dummy"), new StringPair(
+						MY_CLASS_NAME + "$TestORBInitializer1", "dummy"),
+				new StringPair(MY_CLASS_NAME + "$TestORBInitializer2",
+						"dummy") };
 
-		Acceptor[] TestAcceptors = { new TestAcceptor2(), new TestAcceptor1(), null };
+		Acceptor[] TestAcceptors = { new TestAcceptor2(), new TestAcceptor1(),
+				null };
 		// REVISIT: The test data gets put into a Properties object where
 		// order is not guaranteed. Thus the above array is in reverse.
-		StringPair[] TestAcceptorData = { new StringPair("foo.bar.blech.NonExistent", "dummy"),
-				new StringPair(MY_CLASS_NAME + "$TestAcceptor1", "dummy"),
+		StringPair[] TestAcceptorData = { new StringPair(
+				"foo.bar.blech.NonExistent", "dummy"), new StringPair(
+						MY_CLASS_NAME + "$TestAcceptor1", "dummy"),
 				new StringPair(MY_CLASS_NAME + "$TestAcceptor2", "dummy") };
 
-		StringPair[] TestORBInitRefData = { new StringPair("Foo", "ior:930492049394"),
-				new StringPair("Bar", "ior:3453465785633576") };
+		StringPair[] TestORBInitRefData = { new StringPair("Foo",
+				"ior:930492049394"), new StringPair("Bar",
+						"ior:3453465785633576") };
 
 		URL testServicesURL = null;
 		String testServicesString = "corbaloc::camelot/NameService";
@@ -155,26 +142,29 @@ public class ParserTable {
 		// operation,
 		// fieldName, defaultValue,
 		// testValue, testData (string or Pair[])
-		ParserData[] pd = {
-				ParserDataFactory.make(ORBConstants.DEBUG_PROPERTY,
-						OperationFactory.listAction(",", OperationFactory.stringAction()),
-						"debugFlags", new String[0], debugTestData, "subcontract,poa,transport"),
-				ParserDataFactory.make(ORBConstants.INITIAL_HOST_PROPERTY,
-						OperationFactory.stringAction(), "ORBInitialHost", "", "Foo", "Foo"),
+		ParserData[] pd = { ParserDataFactory.make(ORBConstants.DEBUG_PROPERTY,
+				OperationFactory.listAction(",", OperationFactory
+						.stringAction()), "debugFlags", new String[0],
+				debugTestData, "subcontract,poa,transport"), ParserDataFactory
+						.make(ORBConstants.INITIAL_HOST_PROPERTY,
+								OperationFactory.stringAction(),
+								"ORBInitialHost", "", "Foo", "Foo"),
 				ParserDataFactory.make(ORBConstants.INITIAL_PORT_PROPERTY,
 						OperationFactory.integerAction(), "ORBInitialPort",
-						new Integer(ORBConstants.DEFAULT_INITIAL_PORT), new Integer(27314),
-						"27314"),
+						new Integer(ORBConstants.DEFAULT_INITIAL_PORT),
+						new Integer(27314), "27314"),
 				// Where did this come from?
 				// ParserDataFactory.make( ORBConstants.INITIAL_PORT_PROPERTY,
 				// OperationFactory.booleanAction(),
 				// "ORBInitialPortInitialized", Boolean.FALSE,
 				// Boolean.TRUE, "27314" ),
 				ParserDataFactory.make(ORBConstants.SERVER_HOST_PROPERTY,
-						OperationFactory.stringAction(), "ORBServerHost", "", "camelot", "camelot"),
-				ParserDataFactory.make(ORBConstants.SERVER_PORT_PROPERTY,
-						OperationFactory.integerAction(), "ORBServerPort", new Integer(0),
-						new Integer(38143), "38143"),
+						OperationFactory.stringAction(), "ORBServerHost", "",
+						"camelot", "camelot"), ParserDataFactory.make(
+								ORBConstants.SERVER_PORT_PROPERTY,
+								OperationFactory.integerAction(),
+								"ORBServerPort", new Integer(0), new Integer(
+										38143), "38143"),
 				// NOTE: We are putting SERVER_HOST_NAME configuration info into
 				// DataCollectorBase to avoid a security hole. However, that
 				// forces
@@ -184,21 +174,27 @@ public class ParserTable {
 				// out of DataCollectorBase and to correctly support
 				// multihoming.
 				ParserDataFactory.make(ORBConstants.LISTEN_ON_ALL_INTERFACES,
-						OperationFactory.stringAction(), "listenOnAllInterfaces",
+						OperationFactory.stringAction(),
+						"listenOnAllInterfaces",
 						ORBConstants.LISTEN_ON_ALL_INTERFACES, "foo", "foo"),
 				ParserDataFactory.make(ORBConstants.ORB_ID_PROPERTY,
-						OperationFactory.stringAction(), "orbId", "", "foo", "foo"),
-				ParserDataFactory.make(ORBConstants.OLD_ORB_ID_PROPERTY,
-						OperationFactory.stringAction(), "orbId", "", "foo", "foo"),
+						OperationFactory.stringAction(), "orbId", "", "foo",
+						"foo"), ParserDataFactory.make(
+								ORBConstants.OLD_ORB_ID_PROPERTY,
+								OperationFactory.stringAction(), "orbId", "",
+								"foo", "foo"), ParserDataFactory.make(
+										ORBConstants.ORB_SERVER_ID_PROPERTY,
+										OperationFactory.integerAction(),
+										"persistentServerId", new Integer(-1),
+										new Integer(1234), "1234"),
 				ParserDataFactory.make(ORBConstants.ORB_SERVER_ID_PROPERTY,
-						OperationFactory.integerAction(), "persistentServerId", new Integer(-1),
-						new Integer(1234), "1234"),
-				ParserDataFactory.make(ORBConstants.ORB_SERVER_ID_PROPERTY,
-						OperationFactory.setFlagAction(), "persistentServerIdInitialized",
-						Boolean.FALSE, Boolean.TRUE, "1234"),
-				ParserDataFactory.make(ORBConstants.ORB_SERVER_ID_PROPERTY,
-						OperationFactory.setFlagAction(), "orbServerIdPropertySpecified",
-						Boolean.FALSE, Boolean.TRUE, "1234"),
+						OperationFactory.setFlagAction(),
+						"persistentServerIdInitialized", Boolean.FALSE,
+						Boolean.TRUE, "1234"), ParserDataFactory.make(
+								ORBConstants.ORB_SERVER_ID_PROPERTY,
+								OperationFactory.setFlagAction(),
+								"orbServerIdPropertySpecified", Boolean.FALSE,
+								Boolean.TRUE, "1234"),
 				// REVISIT after switch
 				// ParserDataFactory.make(
 				// ORBConstants.INITIAL_SERVICES_PROPERTY,
@@ -211,115 +207,173 @@ public class ParserTable {
 				// "defaultInitRef", null,
 				// "Fooref", "Fooref" ),
 				ParserDataFactory.make(ORBConstants.HIGH_WATER_MARK_PROPERTY,
-						OperationFactory.integerAction(), "highWaterMark", new Integer(240),
-						new Integer(3745), "3745"),
+						OperationFactory.integerAction(), "highWaterMark",
+						new Integer(240), new Integer(3745), "3745"),
 				ParserDataFactory.make(ORBConstants.LOW_WATER_MARK_PROPERTY,
-						OperationFactory.integerAction(), "lowWaterMark", new Integer(100),
-						new Integer(12), "12"),
+						OperationFactory.integerAction(), "lowWaterMark",
+						new Integer(100), new Integer(12), "12"),
 				ParserDataFactory.make(ORBConstants.NUMBER_TO_RECLAIM_PROPERTY,
-						OperationFactory.integerAction(), "numberToReclaim", new Integer(5),
-						new Integer(231), "231"),
-				ParserDataFactory.make(ORBConstants.GIOP_VERSION, makeGVOperation(), "giopVersion",
-						GIOPVersion.DEFAULT_VERSION, new GIOPVersion(2, 3), "2.3"),
-				ParserDataFactory.make(ORBConstants.GIOP_FRAGMENT_SIZE, makeFSOperation(),
-						"giopFragmentSize", new Integer(ORBConstants.GIOP_DEFAULT_FRAGMENT_SIZE),
-						new Integer(65536), "65536"),
-				ParserDataFactory.make(ORBConstants.GIOP_BUFFER_SIZE,
-						OperationFactory.integerAction(), "giopBufferSize",
-						new Integer(ORBConstants.GIOP_DEFAULT_BUFFER_SIZE), new Integer(234000),
-						"234000"),
-				ParserDataFactory.make(ORBConstants.GIOP_11_BUFFMGR, makeBMGROperation(),
-						"giop11BuffMgr", new Integer(ORBConstants.DEFAULT_GIOP_11_BUFFMGR),
-						new Integer(1), "CLCT"),
-				ParserDataFactory.make(ORBConstants.GIOP_12_BUFFMGR, makeBMGROperation(),
-						"giop12BuffMgr", new Integer(ORBConstants.DEFAULT_GIOP_12_BUFFMGR),
-						new Integer(0), "GROW"),
+						OperationFactory.integerAction(), "numberToReclaim",
+						new Integer(5), new Integer(231), "231"),
+				ParserDataFactory.make(ORBConstants.GIOP_VERSION,
+						makeGVOperation(), "giopVersion",
+						GIOPVersion.DEFAULT_VERSION, new GIOPVersion(2, 3),
+						"2.3"), ParserDataFactory.make(
+								ORBConstants.GIOP_FRAGMENT_SIZE,
+								makeFSOperation(), "giopFragmentSize",
+								new Integer(
+										ORBConstants.GIOP_DEFAULT_FRAGMENT_SIZE),
+								new Integer(65536), "65536"), ParserDataFactory
+										.make(ORBConstants.GIOP_BUFFER_SIZE,
+												OperationFactory
+														.integerAction(),
+												"giopBufferSize", new Integer(
+														ORBConstants.GIOP_DEFAULT_BUFFER_SIZE),
+												new Integer(234000), "234000"),
+				ParserDataFactory.make(ORBConstants.GIOP_11_BUFFMGR,
+						makeBMGROperation(), "giop11BuffMgr", new Integer(
+								ORBConstants.DEFAULT_GIOP_11_BUFFMGR),
+						new Integer(1), "CLCT"), ParserDataFactory.make(
+								ORBConstants.GIOP_12_BUFFMGR,
+								makeBMGROperation(), "giop12BuffMgr",
+								new Integer(
+										ORBConstants.DEFAULT_GIOP_12_BUFFMGR),
+								new Integer(0), "GROW"),
 
 				// Note that the same property is used to set two different
 				// fields here. This requires that both entries use the same
 				// test
 				// data, or the test will fail.
 				ParserDataFactory.make(ORBConstants.GIOP_TARGET_ADDRESSING,
-						OperationFactory.compose(OperationFactory.integerRangeAction(0, 3),
-								OperationFactory.convertIntegerToShort()),
-						"giopTargetAddressPreference", new Short(ORBConstants.ADDR_DISP_HANDLE_ALL),
-						new Short((short) 2), "2"),
-				ParserDataFactory.make(ORBConstants.GIOP_TARGET_ADDRESSING, makeADOperation(),
-						"giopAddressDisposition", new Short(KeyAddr.value), new Short((short) 2),
-						"2"),
-				ParserDataFactory.make(ORBConstants.ALWAYS_SEND_CODESET_CTX_PROPERTY,
-						OperationFactory.booleanAction(), "alwaysSendCodeSetCtx", Boolean.TRUE,
-						Boolean.FALSE, "false"),
-				ParserDataFactory.make(ORBConstants.USE_BOMS, OperationFactory.booleanAction(),
-						"useByteOrderMarkers",
-						Boolean.valueOf(ORBConstants.DEFAULT_USE_BYTE_ORDER_MARKERS), Boolean.FALSE,
-						"false"),
-				ParserDataFactory.make(ORBConstants.USE_BOMS_IN_ENCAPS,
-						OperationFactory.booleanAction(), "useByteOrderMarkersInEncaps",
-						Boolean.valueOf(ORBConstants.DEFAULT_USE_BYTE_ORDER_MARKERS_IN_ENCAPS),
-						Boolean.FALSE, "false"),
-				ParserDataFactory.make(ORBConstants.CHAR_CODESETS, makeCSOperation(), "charData",
-						CodeSetComponentInfo.JAVASOFT_DEFAULT_CODESETS.getCharComponent(),
-						CodeSetComponentInfo.createFromString(codeSetTestString),
-						codeSetTestString),
-				ParserDataFactory.make(ORBConstants.WCHAR_CODESETS, makeCSOperation(), "wcharData",
-						CodeSetComponentInfo.JAVASOFT_DEFAULT_CODESETS.getWCharComponent(),
-						CodeSetComponentInfo.createFromString(codeSetTestString),
-						codeSetTestString),
+						OperationFactory.compose(OperationFactory
+								.integerRangeAction(0, 3), OperationFactory
+										.convertIntegerToShort()),
+						"giopTargetAddressPreference", new Short(
+								ORBConstants.ADDR_DISP_HANDLE_ALL), new Short(
+										(short) 2), "2"), ParserDataFactory
+												.make(ORBConstants.GIOP_TARGET_ADDRESSING,
+														makeADOperation(),
+														"giopAddressDisposition",
+														new Short(
+																KeyAddr.value),
+														new Short((short) 2),
+														"2"), ParserDataFactory
+																.make(ORBConstants.ALWAYS_SEND_CODESET_CTX_PROPERTY,
+																		OperationFactory
+																				.booleanAction(),
+																		"alwaysSendCodeSetCtx",
+																		Boolean.TRUE,
+																		Boolean.FALSE,
+																		"false"),
+				ParserDataFactory.make(ORBConstants.USE_BOMS, OperationFactory
+						.booleanAction(), "useByteOrderMarkers", Boolean
+								.valueOf(
+										ORBConstants.DEFAULT_USE_BYTE_ORDER_MARKERS),
+						Boolean.FALSE, "false"), ParserDataFactory.make(
+								ORBConstants.USE_BOMS_IN_ENCAPS,
+								OperationFactory.booleanAction(),
+								"useByteOrderMarkersInEncaps", Boolean.valueOf(
+										ORBConstants.DEFAULT_USE_BYTE_ORDER_MARKERS_IN_ENCAPS),
+								Boolean.FALSE, "false"), ParserDataFactory.make(
+										ORBConstants.CHAR_CODESETS,
+										makeCSOperation(), "charData",
+										CodeSetComponentInfo.JAVASOFT_DEFAULT_CODESETS
+												.getCharComponent(),
+										CodeSetComponentInfo.createFromString(
+												codeSetTestString),
+										codeSetTestString), ParserDataFactory
+												.make(ORBConstants.WCHAR_CODESETS,
+														makeCSOperation(),
+														"wcharData",
+														CodeSetComponentInfo.JAVASOFT_DEFAULT_CODESETS
+																.getWCharComponent(),
+														CodeSetComponentInfo
+																.createFromString(
+																		codeSetTestString),
+														codeSetTestString),
 				ParserDataFactory.make(ORBConstants.ALLOW_LOCAL_OPTIMIZATION,
-						OperationFactory.booleanAction(), "allowLocalOptimization", Boolean.FALSE,
-						Boolean.TRUE, "true"),
-				ParserDataFactory.make(ORBConstants.LEGACY_SOCKET_FACTORY_CLASS_PROPERTY,
-						makeLegacySocketFactoryOperation(),
-						// No default - must be set by user if they are using
-						// legacy socket factory.
-						"legacySocketFactory", null, new TestLegacyORBSocketFactory(),
-						MY_CLASS_NAME + "$TestLegacyORBSocketFactory"),
-				ParserDataFactory.make(ORBConstants.SOCKET_FACTORY_CLASS_PROPERTY,
+						OperationFactory.booleanAction(),
+						"allowLocalOptimization", Boolean.FALSE, Boolean.TRUE,
+						"true"), ParserDataFactory.make(
+								ORBConstants.LEGACY_SOCKET_FACTORY_CLASS_PROPERTY,
+								makeLegacySocketFactoryOperation(),
+								// No default - must be set by user if they are using
+								// legacy socket factory.
+								"legacySocketFactory", null,
+								new TestLegacyORBSocketFactory(), MY_CLASS_NAME
+										+ "$TestLegacyORBSocketFactory"),
+				ParserDataFactory.make(
+						ORBConstants.SOCKET_FACTORY_CLASS_PROPERTY,
 						makeSocketFactoryOperation(), "socketFactory",
-						new DefaultSocketFactoryImpl(), new TestORBSocketFactory(),
-						MY_CLASS_NAME + "$TestORBSocketFactory"),
-				ParserDataFactory.make(ORBConstants.LISTEN_SOCKET_PROPERTY, makeUSLOperation(),
-						"userSpecifiedListenPorts", new USLPort[0], USLPorts, "FOO:2701,BAR:3333"),
-				ParserDataFactory.make(ORBConstants.IOR_TO_SOCKET_INFO_CLASS_PROPERTY,
+						new DefaultSocketFactoryImpl(),
+						new TestORBSocketFactory(), MY_CLASS_NAME
+								+ "$TestORBSocketFactory"), ParserDataFactory
+										.make(ORBConstants.LISTEN_SOCKET_PROPERTY,
+												makeUSLOperation(),
+												"userSpecifiedListenPorts",
+												new USLPort[0], USLPorts,
+												"FOO:2701,BAR:3333"),
+				ParserDataFactory.make(
+						ORBConstants.IOR_TO_SOCKET_INFO_CLASS_PROPERTY,
 						makeIORToSocketInfoOperation(), "iorToSocketInfo",
-						new DefaultIORToSocketInfoImpl(), new TestIORToSocketInfo(),
-						MY_CLASS_NAME + "$TestIORToSocketInfo"),
-				ParserDataFactory.make(ORBConstants.IIOP_PRIMARY_TO_CONTACT_INFO_CLASS_PROPERTY,
-						makeIIOPPrimaryToContactInfoOperation(), "iiopPrimaryToContactInfo", null,
-						new TestIIOPPrimaryToContactInfo(),
-						MY_CLASS_NAME + "$TestIIOPPrimaryToContactInfo"),
-				ParserDataFactory.make(ORBConstants.CONTACT_INFO_LIST_FACTORY_CLASS_PROPERTY,
-						makeContactInfoListFactoryOperation(), "corbaContactInfoListFactory", null,
-						new TestContactInfoListFactory(),
-						MY_CLASS_NAME + "$TestContactInfoListFactory"),
-				ParserDataFactory.make(ORBConstants.PERSISTENT_SERVER_PORT_PROPERTY,
-						OperationFactory.integerAction(), "persistentServerPort", new Integer(0),
-						new Integer(2743), "2743"),
-				ParserDataFactory.make(ORBConstants.PERSISTENT_SERVER_PORT_PROPERTY,
-						OperationFactory.setFlagAction(), "persistentPortInitialized",
-						Boolean.FALSE, Boolean.TRUE, "2743"),
+						new DefaultIORToSocketInfoImpl(),
+						new TestIORToSocketInfo(), MY_CLASS_NAME
+								+ "$TestIORToSocketInfo"), ParserDataFactory
+										.make(ORBConstants.IIOP_PRIMARY_TO_CONTACT_INFO_CLASS_PROPERTY,
+												makeIIOPPrimaryToContactInfoOperation(),
+												"iiopPrimaryToContactInfo",
+												null,
+												new TestIIOPPrimaryToContactInfo(),
+												MY_CLASS_NAME
+														+ "$TestIIOPPrimaryToContactInfo"),
+				ParserDataFactory.make(
+						ORBConstants.CONTACT_INFO_LIST_FACTORY_CLASS_PROPERTY,
+						makeContactInfoListFactoryOperation(),
+						"corbaContactInfoListFactory", null,
+						new TestContactInfoListFactory(), MY_CLASS_NAME
+								+ "$TestContactInfoListFactory"),
+				ParserDataFactory.make(
+						ORBConstants.PERSISTENT_SERVER_PORT_PROPERTY,
+						OperationFactory.integerAction(),
+						"persistentServerPort", new Integer(0), new Integer(
+								2743), "2743"), ParserDataFactory.make(
+										ORBConstants.PERSISTENT_SERVER_PORT_PROPERTY,
+										OperationFactory.setFlagAction(),
+										"persistentPortInitialized",
+										Boolean.FALSE, Boolean.TRUE, "2743"),
 				ParserDataFactory.make(ORBConstants.SERVER_ID_PROPERTY,
-						OperationFactory.integerAction(), "persistentServerId", new Integer(0),
-						new Integer(294), "294"),
+						OperationFactory.integerAction(), "persistentServerId",
+						new Integer(0), new Integer(294), "294"),
 				ParserDataFactory.make(ORBConstants.SERVER_ID_PROPERTY,
-						OperationFactory.setFlagAction(), "persistentServerIdInitialized",
-						Boolean.FALSE, Boolean.TRUE, "294"),
-				ParserDataFactory.make(ORBConstants.SERVER_ID_PROPERTY,
-						OperationFactory.setFlagAction(), "orbServerIdPropertySpecified",
-						Boolean.FALSE, Boolean.TRUE, "294"),
-				ParserDataFactory.make(ORBConstants.ACTIVATED_PROPERTY,
-						OperationFactory.booleanAction(), "serverIsORBActivated", Boolean.FALSE,
-						Boolean.TRUE, "true"),
-				ParserDataFactory.make(ORBConstants.BAD_SERVER_ID_HANDLER_CLASS_PROPERTY,
-						OperationFactory.classAction(), "badServerIdHandlerClass", null,
-						TestBadServerIdHandler.class, MY_CLASS_NAME + "$TestBadServerIdHandler"),
-				ParserDataFactory.make(ORBConstants.PI_ORB_INITIALIZER_CLASS_PREFIX,
-						makeROIOperation(), "orbInitializers", new ORBInitializer[0],
-						TestORBInitializers, TestORBInitData, ORBInitializer.class),
-				ParserDataFactory.make(ORBConstants.ACCEPTOR_CLASS_PREFIX_PROPERTY,
-						makeAcceptorInstantiationOperation(), "acceptors", new Acceptor[0],
-						TestAcceptors, TestAcceptorData, Acceptor.class),
+						OperationFactory.setFlagAction(),
+						"persistentServerIdInitialized", Boolean.FALSE,
+						Boolean.TRUE, "294"), ParserDataFactory.make(
+								ORBConstants.SERVER_ID_PROPERTY,
+								OperationFactory.setFlagAction(),
+								"orbServerIdPropertySpecified", Boolean.FALSE,
+								Boolean.TRUE, "294"), ParserDataFactory.make(
+										ORBConstants.ACTIVATED_PROPERTY,
+										OperationFactory.booleanAction(),
+										"serverIsORBActivated", Boolean.FALSE,
+										Boolean.TRUE, "true"), ParserDataFactory
+												.make(ORBConstants.BAD_SERVER_ID_HANDLER_CLASS_PROPERTY,
+														OperationFactory
+																.classAction(),
+														"badServerIdHandlerClass",
+														null,
+														TestBadServerIdHandler.class,
+														MY_CLASS_NAME
+																+ "$TestBadServerIdHandler"),
+				ParserDataFactory.make(
+						ORBConstants.PI_ORB_INITIALIZER_CLASS_PREFIX,
+						makeROIOperation(), "orbInitializers",
+						new ORBInitializer[0], TestORBInitializers,
+						TestORBInitData, ORBInitializer.class),
+				ParserDataFactory.make(
+						ORBConstants.ACCEPTOR_CLASS_PREFIX_PROPERTY,
+						makeAcceptorInstantiationOperation(), "acceptors",
+						new Acceptor[0], TestAcceptors, TestAcceptorData,
+						Acceptor.class),
 
 				//
 				// Socket/Channel control
@@ -341,46 +395,58 @@ public class ParserTable {
 				// useSelectThreadToWait = false
 				// useWorkerThreadForEvent = true
 
-				ParserDataFactory.make(ORBConstants.ACCEPTOR_SOCKET_TYPE_PROPERTY,
+				ParserDataFactory.make(
+						ORBConstants.ACCEPTOR_SOCKET_TYPE_PROPERTY,
 						OperationFactory.stringAction(), "acceptorSocketType",
 						ORBConstants.SOCKETCHANNEL, "foo", "foo"),
 
-				ParserDataFactory.make(ORBConstants.USE_NIO_SELECT_TO_WAIT_PROPERTY,
-						OperationFactory.booleanAction(), "acceptorSocketUseSelectThreadToWait",
-						Boolean.TRUE, Boolean.TRUE, "true"),
 				ParserDataFactory.make(
-						ORBConstants.ACCEPTOR_SOCKET_USE_WORKER_THREAD_FOR_EVENT_PROPERTY,
-						OperationFactory.booleanAction(), "acceptorSocketUseWorkerThreadForEvent",
-						Boolean.TRUE, Boolean.TRUE, "true"),
-				ParserDataFactory.make(ORBConstants.CONNECTION_SOCKET_TYPE_PROPERTY,
+						ORBConstants.USE_NIO_SELECT_TO_WAIT_PROPERTY,
+						OperationFactory.booleanAction(),
+						"acceptorSocketUseSelectThreadToWait", Boolean.TRUE,
+						Boolean.TRUE, "true"), ParserDataFactory.make(
+								ORBConstants.ACCEPTOR_SOCKET_USE_WORKER_THREAD_FOR_EVENT_PROPERTY,
+								OperationFactory.booleanAction(),
+								"acceptorSocketUseWorkerThreadForEvent",
+								Boolean.TRUE, Boolean.TRUE, "true"),
+				ParserDataFactory.make(
+						ORBConstants.CONNECTION_SOCKET_TYPE_PROPERTY,
 						OperationFactory.stringAction(), "connectionSocketType",
 						ORBConstants.SOCKETCHANNEL, "foo", "foo"),
-				ParserDataFactory.make(ORBConstants.USE_NIO_SELECT_TO_WAIT_PROPERTY,
-						OperationFactory.booleanAction(), "connectionSocketUseSelectThreadToWait",
-						Boolean.TRUE, Boolean.TRUE, "true"),
 				ParserDataFactory.make(
-						ORBConstants.CONNECTION_SOCKET_USE_WORKER_THREAD_FOR_EVENT_PROPERTY,
-						OperationFactory.booleanAction(), "connectionSocketUseWorkerThreadForEvent",
-						Boolean.TRUE, Boolean.TRUE, "true"),
-				ParserDataFactory.make(ORBConstants.DISABLE_DIRECT_BYTE_BUFFER_USE_PROPERTY,
-						OperationFactory.booleanAction(), "disableDirectByteBufferUse",
-						Boolean.FALSE, Boolean.TRUE, "true"),
-				ParserDataFactory.make(ORBConstants.TRANSPORT_TCP_READ_TIMEOUTS_PROPERTY,
-						makeTTCPRTOperation(), "readTimeouts",
-						TransportDefault.makeReadTimeoutsFactory().create(
-								ORBConstants.TRANSPORT_TCP_INITIAL_TIME_TO_WAIT,
-								ORBConstants.TRANSPORT_TCP_MAX_TIME_TO_WAIT,
-								ORBConstants.TRANSPORT_TCP_GIOP_HEADER_MAX_TIME_TO_WAIT,
-								ORBConstants.TRANSPORT_TCP_TIME_TO_WAIT_BACKOFF_FACTOR),
-						readTimeouts, "100:3000:300:20"),
-				ParserDataFactory.make(ORBConstants.ENABLE_JAVA_SERIALIZATION_PROPERTY,
-						OperationFactory.booleanAction(), "enableJavaSerialization", Boolean.FALSE,
-						Boolean.FALSE, "false"),
-				ParserDataFactory.make(ORBConstants.USE_REP_ID, OperationFactory.booleanAction(),
-						"useRepId", Boolean.TRUE, Boolean.TRUE, "true"),
+						ORBConstants.USE_NIO_SELECT_TO_WAIT_PROPERTY,
+						OperationFactory.booleanAction(),
+						"connectionSocketUseSelectThreadToWait", Boolean.TRUE,
+						Boolean.TRUE, "true"), ParserDataFactory.make(
+								ORBConstants.CONNECTION_SOCKET_USE_WORKER_THREAD_FOR_EVENT_PROPERTY,
+								OperationFactory.booleanAction(),
+								"connectionSocketUseWorkerThreadForEvent",
+								Boolean.TRUE, Boolean.TRUE, "true"),
+				ParserDataFactory.make(
+						ORBConstants.DISABLE_DIRECT_BYTE_BUFFER_USE_PROPERTY,
+						OperationFactory.booleanAction(),
+						"disableDirectByteBufferUse", Boolean.FALSE,
+						Boolean.TRUE, "true"), ParserDataFactory.make(
+								ORBConstants.TRANSPORT_TCP_READ_TIMEOUTS_PROPERTY,
+								makeTTCPRTOperation(), "readTimeouts",
+								TransportDefault.makeReadTimeoutsFactory()
+										.create(ORBConstants.TRANSPORT_TCP_INITIAL_TIME_TO_WAIT,
+												ORBConstants.TRANSPORT_TCP_MAX_TIME_TO_WAIT,
+												ORBConstants.TRANSPORT_TCP_GIOP_HEADER_MAX_TIME_TO_WAIT,
+												ORBConstants.TRANSPORT_TCP_TIME_TO_WAIT_BACKOFF_FACTOR),
+								readTimeouts, "100:3000:300:20"),
+				ParserDataFactory.make(
+						ORBConstants.ENABLE_JAVA_SERIALIZATION_PROPERTY,
+						OperationFactory.booleanAction(),
+						"enableJavaSerialization", Boolean.FALSE, Boolean.FALSE,
+						"false"), ParserDataFactory.make(
+								ORBConstants.USE_REP_ID, OperationFactory
+										.booleanAction(), "useRepId",
+								Boolean.TRUE, Boolean.TRUE, "true"),
 				ParserDataFactory.make(ORBConstants.ORB_INIT_REF_PROPERTY,
-						OperationFactory.identityAction(), "orbInitialReferences",
-						new StringPair[0], TestORBInitRefData, TestORBInitRefData,
+						OperationFactory.identityAction(),
+						"orbInitialReferences", new StringPair[0],
+						TestORBInitRefData, TestORBInitRefData,
 						StringPair.class) };
 
 		parserData = pd;
@@ -395,13 +461,13 @@ public class ParserTable {
 			return 1;
 		}
 
-		public void handle(ObjectKey objectKey) {
-		}
+		public void handle(ObjectKey objectKey) {}
 	}
 
 	private Operation makeTTCPRTOperation() {
-		Operation[] fourIop = { OperationFactory.integerAction(), OperationFactory.integerAction(),
-				OperationFactory.integerAction(), OperationFactory.integerAction() };
+		Operation[] fourIop = { OperationFactory.integerAction(),
+				OperationFactory.integerAction(), OperationFactory
+						.integerAction(), OperationFactory.integerAction() };
 
 		Operation op2 = OperationFactory.sequenceAction(":", fourIop);
 
@@ -412,9 +478,9 @@ public class ParserTable {
 				Integer maxGIOPHdrTime = (Integer) (values[1]);
 				Integer maxGIOPBodyTime = (Integer) (values[2]);
 				Integer backoffPercent = (Integer) (values[3]);
-				return TransportDefault.makeReadTimeoutsFactory().create(initialTime.intValue(),
-						maxGIOPHdrTime.intValue(), maxGIOPBodyTime.intValue(),
-						backoffPercent.intValue());
+				return TransportDefault.makeReadTimeoutsFactory().create(
+						initialTime.intValue(), maxGIOPHdrTime.intValue(),
+						maxGIOPBodyTime.intValue(), backoffPercent.intValue());
 			}
 		};
 
@@ -423,7 +489,8 @@ public class ParserTable {
 	}
 
 	private Operation makeUSLOperation() {
-		Operation[] siop = { OperationFactory.stringAction(), OperationFactory.integerAction() };
+		Operation[] siop = { OperationFactory.stringAction(), OperationFactory
+				.integerAction() };
 		Operation op2 = OperationFactory.sequenceAction(":", siop);
 
 		Operation uslop = new Operation() {
@@ -440,8 +507,8 @@ public class ParserTable {
 		return listenop;
 	}
 
-	public static final class TestLegacyORBSocketFactory
-			implements com.sun.corba.se.spi.legacy.connection.ORBSocketFactory {
+	public static final class TestLegacyORBSocketFactory implements
+			com.sun.corba.se.spi.legacy.connection.ORBSocketFactory {
 		public boolean equals(Object other) {
 			return other instanceof TestLegacyORBSocketFactory;
 		}
@@ -454,7 +521,8 @@ public class ParserTable {
 			return null;
 		}
 
-		public SocketInfo getEndPointInfo(org.omg.CORBA.ORB orb, IOR ior, SocketInfo socketInfo) {
+		public SocketInfo getEndPointInfo(org.omg.CORBA.ORB orb, IOR ior,
+				SocketInfo socketInfo) {
 			return null;
 		}
 
@@ -463,8 +531,8 @@ public class ParserTable {
 		}
 	}
 
-	public static final class TestORBSocketFactory
-			implements com.sun.corba.se.spi.transport.ORBSocketFactory {
+	public static final class TestORBSocketFactory implements
+			com.sun.corba.se.spi.transport.ORBSocketFactory {
 		public boolean equals(Object other) {
 			return other instanceof TestORBSocketFactory;
 		}
@@ -473,10 +541,10 @@ public class ParserTable {
 			return 1;
 		}
 
-		public void setORB(ORB orb) {
-		}
+		public void setORB(ORB orb) {}
 
-		public ServerSocket createServerSocket(String type, InetSocketAddress a) {
+		public ServerSocket createServerSocket(String type,
+				InetSocketAddress a) {
 			return null;
 		}
 
@@ -484,9 +552,8 @@ public class ParserTable {
 			return null;
 		}
 
-		public void setAcceptedSocketOptions(Acceptor acceptor, ServerSocket serverSocket,
-				Socket socket) {
-		}
+		public void setAcceptedSocketOptions(Acceptor acceptor,
+				ServerSocket serverSocket, Socket socket) {}
 	}
 
 	public static final class TestIORToSocketInfo implements IORToSocketInfo {
@@ -503,20 +570,23 @@ public class ParserTable {
 		}
 	}
 
-	public static final class TestIIOPPrimaryToContactInfo implements IIOPPrimaryToContactInfo {
-		public void reset(ContactInfo primary) {
-		}
+	public static final class TestIIOPPrimaryToContactInfo implements
+			IIOPPrimaryToContactInfo {
+		public void reset(ContactInfo primary) {}
 
-		public boolean hasNext(ContactInfo primary, ContactInfo previous, List contactInfos) {
+		public boolean hasNext(ContactInfo primary, ContactInfo previous,
+				List contactInfos) {
 			return true;
 		}
 
-		public ContactInfo next(ContactInfo primary, ContactInfo previous, List contactInfos) {
+		public ContactInfo next(ContactInfo primary, ContactInfo previous,
+				List contactInfos) {
 			return null;
 		}
 	}
 
-	public static final class TestContactInfoListFactory implements CorbaContactInfoListFactory {
+	public static final class TestContactInfoListFactory implements
+			CorbaContactInfoListFactory {
 		public boolean equals(Object other) {
 			return other instanceof TestContactInfoListFactory;
 		}
@@ -525,8 +595,7 @@ public class ParserTable {
 			return 1;
 		}
 
-		public void setORB(ORB orb) {
-		}
+		public void setORB(ORB orb) {}
 
 		public CorbaContactInfoList create(IOR ior) {
 			return null;
@@ -555,8 +624,8 @@ public class ParserTable {
 				String param = (String) value;
 
 				try {
-					Class<?> legacySocketFactoryClass = SharedSecrets.getJavaCorbaAccess()
-							.loadClass(param);
+					Class<?> legacySocketFactoryClass = SharedSecrets
+							.getJavaCorbaAccess().loadClass(param);
 					// For security reasons avoid creating an instance if
 					// this socket factory class is not one that would fail
 					// the class cast anyway.
@@ -564,7 +633,8 @@ public class ParserTable {
 							.isAssignableFrom(legacySocketFactoryClass)) {
 						return legacySocketFactoryClass.newInstance();
 					} else {
-						throw wrapper.illegalSocketFactoryType(legacySocketFactoryClass.toString());
+						throw wrapper.illegalSocketFactoryType(
+								legacySocketFactoryClass.toString());
 					}
 				} catch (Exception ex) {
 					// ClassNotFoundException, IllegalAccessException,
@@ -584,8 +654,8 @@ public class ParserTable {
 				String param = (String) value;
 
 				try {
-					Class<?> socketFactoryClass = SharedSecrets.getJavaCorbaAccess()
-							.loadClass(param);
+					Class<?> socketFactoryClass = SharedSecrets
+							.getJavaCorbaAccess().loadClass(param);
 					// For security reasons avoid creating an instance if
 					// this socket factory class is not one that would fail
 					// the class cast anyway.
@@ -593,7 +663,8 @@ public class ParserTable {
 							.isAssignableFrom(socketFactoryClass)) {
 						return socketFactoryClass.newInstance();
 					} else {
-						throw wrapper.illegalSocketFactoryType(socketFactoryClass.toString());
+						throw wrapper.illegalSocketFactoryType(
+								socketFactoryClass.toString());
 					}
 				} catch (Exception ex) {
 					// ClassNotFoundException, IllegalAccessException,
@@ -613,15 +684,17 @@ public class ParserTable {
 				String param = (String) value;
 
 				try {
-					Class<?> iorToSocketInfoClass = SharedSecrets.getJavaCorbaAccess()
-							.loadClass(param);
+					Class<?> iorToSocketInfoClass = SharedSecrets
+							.getJavaCorbaAccess().loadClass(param);
 					// For security reasons avoid creating an instance if
 					// this socket factory class is not one that would fail
 					// the class cast anyway.
-					if (IORToSocketInfo.class.isAssignableFrom(iorToSocketInfoClass)) {
+					if (IORToSocketInfo.class.isAssignableFrom(
+							iorToSocketInfoClass)) {
 						return iorToSocketInfoClass.newInstance();
 					} else {
-						throw wrapper.illegalIorToSocketInfoType(iorToSocketInfoClass.toString());
+						throw wrapper.illegalIorToSocketInfoType(
+								iorToSocketInfoClass.toString());
 					}
 				} catch (Exception ex) {
 					// ClassNotFoundException, IllegalAccessException,
@@ -641,13 +714,13 @@ public class ParserTable {
 				String param = (String) value;
 
 				try {
-					Class<?> iiopPrimaryToContactInfoClass = SharedSecrets.getJavaCorbaAccess()
-							.loadClass(param);
+					Class<?> iiopPrimaryToContactInfoClass = SharedSecrets
+							.getJavaCorbaAccess().loadClass(param);
 					// For security reasons avoid creating an instance if
 					// this socket factory class is not one that would fail
 					// the class cast anyway.
-					if (IIOPPrimaryToContactInfo.class
-							.isAssignableFrom(iiopPrimaryToContactInfoClass)) {
+					if (IIOPPrimaryToContactInfo.class.isAssignableFrom(
+							iiopPrimaryToContactInfoClass)) {
 						return iiopPrimaryToContactInfoClass.newInstance();
 					} else {
 						throw wrapper.illegalIiopPrimaryToContactInfoType(
@@ -671,13 +744,13 @@ public class ParserTable {
 				String param = (String) value;
 
 				try {
-					Class<?> contactInfoListFactoryClass = SharedSecrets.getJavaCorbaAccess()
-							.loadClass(param);
+					Class<?> contactInfoListFactoryClass = SharedSecrets
+							.getJavaCorbaAccess().loadClass(param);
 					// For security reasons avoid creating an instance if
 					// this socket factory class is not one that would fail
 					// the class cast anyway.
-					if (CorbaContactInfoListFactory.class
-							.isAssignableFrom(contactInfoListFactoryClass)) {
+					if (CorbaContactInfoListFactory.class.isAssignableFrom(
+							contactInfoListFactoryClass)) {
 						return contactInfoListFactoryClass.newInstance();
 					} else {
 						throw wrapper.illegalContactInfoListFactoryType(
@@ -708,8 +781,9 @@ public class ParserTable {
 
 	private Operation makeADOperation() {
 		Operation admap = new Operation() {
-			private Integer[] map = { new Integer(KeyAddr.value), new Integer(ProfileAddr.value),
-					new Integer(ReferenceAddr.value), new Integer(KeyAddr.value) };
+			private Integer[] map = { new Integer(KeyAddr.value), new Integer(
+					ProfileAddr.value), new Integer(ReferenceAddr.value),
+					new Integer(KeyAddr.value) };
 
 			public Object operate(Object value) {
 				int val = ((Integer) value).intValue();
@@ -719,7 +793,8 @@ public class ParserTable {
 
 		Operation rangeop = OperationFactory.integerRangeAction(0, 3);
 		Operation op1 = OperationFactory.compose(rangeop, admap);
-		Operation result = OperationFactory.compose(op1, OperationFactory.convertIntegerToShort());
+		Operation result = OperationFactory.compose(op1, OperationFactory
+				.convertIntegerToShort());
 		return result;
 	}
 
@@ -728,8 +803,9 @@ public class ParserTable {
 			public Object operate(Object value) {
 				int giopFragmentSize = ((Integer) value).intValue();
 				if (giopFragmentSize < ORBConstants.GIOP_FRAGMENT_MINIMUM_SIZE) {
-					throw wrapper.fragmentSizeMinimum(new Integer(giopFragmentSize),
-							new Integer(ORBConstants.GIOP_FRAGMENT_MINIMUM_SIZE));
+					throw wrapper.fragmentSizeMinimum(new Integer(
+							giopFragmentSize), new Integer(
+									ORBConstants.GIOP_FRAGMENT_MINIMUM_SIZE));
 				}
 
 				if (giopFragmentSize % ORBConstants.GIOP_FRAGMENT_DIVISOR != 0)
@@ -740,12 +816,14 @@ public class ParserTable {
 			}
 		};
 
-		Operation result = OperationFactory.compose(OperationFactory.integerAction(), fschecker);
+		Operation result = OperationFactory.compose(OperationFactory
+				.integerAction(), fschecker);
 		return result;
 	}
 
 	private Operation makeGVOperation() {
-		Operation gvHelper = OperationFactory.listAction(".", OperationFactory.integerAction());
+		Operation gvHelper = OperationFactory.listAction(".", OperationFactory
+				.integerAction());
 		Operation gvMain = new Operation() {
 			public Object operate(Object value) {
 				Object[] nums = (Object[]) value;
@@ -760,8 +838,8 @@ public class ParserTable {
 		return result;
 	}
 
-	public static final class TestORBInitializer1 extends org.omg.CORBA.LocalObject
-			implements ORBInitializer {
+	public static final class TestORBInitializer1 extends
+			org.omg.CORBA.LocalObject implements ORBInitializer {
 		public boolean equals(Object other) {
 			return other instanceof TestORBInitializer1;
 		}
@@ -770,15 +848,13 @@ public class ParserTable {
 			return 1;
 		}
 
-		public void pre_init(ORBInitInfo info) {
-		}
+		public void pre_init(ORBInitInfo info) {}
 
-		public void post_init(ORBInitInfo info) {
-		}
+		public void post_init(ORBInitInfo info) {}
 	}
 
-	public static final class TestORBInitializer2 extends org.omg.CORBA.LocalObject
-			implements ORBInitializer {
+	public static final class TestORBInitializer2 extends
+			org.omg.CORBA.LocalObject implements ORBInitializer {
 		public boolean equals(Object other) {
 			return other instanceof TestORBInitializer2;
 		}
@@ -787,11 +863,9 @@ public class ParserTable {
 			return 1;
 		}
 
-		public void pre_init(ORBInitInfo info) {
-		}
+		public void pre_init(ORBInitInfo info) {}
 
-		public void post_init(ORBInitInfo info) {
-		}
+		public void post_init(ORBInitInfo info) {}
 	}
 
 	private Operation makeROIOperation() {
@@ -809,7 +883,8 @@ public class ParserTable {
 				// For security reasons avoid creating an instance
 				// if this class is one that would fail the class cast
 				// to ORBInitializer anyway.
-				if (org.omg.PortableInterceptor.ORBInitializer.class.isAssignableFrom(initClass)) {
+				if (org.omg.PortableInterceptor.ORBInitializer.class
+						.isAssignableFrom(initClass)) {
 					// Now that we have a class object, instantiate one and
 					// remember it:
 					ORBInitializer initializer = null;
@@ -818,7 +893,8 @@ public class ParserTable {
 						initializer = (ORBInitializer) AccessController
 								.doPrivileged(new PrivilegedExceptionAction() {
 									public Object run()
-											throws InstantiationException, IllegalAccessException {
+											throws InstantiationException,
+											IllegalAccessException {
 										return initClass.newInstance();
 									}
 								});
@@ -827,7 +903,8 @@ public class ParserTable {
 						throw wrapper.orbInitializerFailure(exc.getException(),
 								initClass.getName());
 					} catch (Exception exc) {
-						throw wrapper.orbInitializerFailure(exc, initClass.getName());
+						throw wrapper.orbInitializerFailure(exc, initClass
+								.getName());
 					}
 
 					return initializer;
@@ -863,8 +940,8 @@ public class ParserTable {
 			return "FOO";
 		}
 
-		public void setConnectionCache(InboundConnectionCache connectionCache) {
-		}
+		public void setConnectionCache(
+				InboundConnectionCache connectionCache) {}
 
 		public InboundConnectionCache getConnectionCache() {
 			return null;
@@ -874,44 +951,43 @@ public class ParserTable {
 			return true;
 		}
 
-		public void setUseSelectThreadForConnections(boolean x) {
-		}
+		public void setUseSelectThreadForConnections(boolean x) {}
 
 		public boolean shouldUseSelectThreadForConnections() {
 			return true;
 		}
 
-		public void setUseWorkerThreadForConnections(boolean x) {
-		}
+		public void setUseWorkerThreadForConnections(boolean x) {}
 
 		public boolean shouldUseWorkerThreadForConnections() {
 			return true;
 		}
 
-		public void accept() {
-		}
+		public void accept() {}
 
-		public void close() {
-		}
+		public void close() {}
 
 		public EventHandler getEventHandler() {
 			return null;
 		}
 
-		public MessageMediator createMessageMediator(Broker xbroker, Connection xconnection) {
+		public MessageMediator createMessageMediator(Broker xbroker,
+				Connection xconnection) {
 			return null;
 		}
 
-		public MessageMediator finishCreatingMessageMediator(Broker xbroker, Connection xconnection,
+		public MessageMediator finishCreatingMessageMediator(Broker xbroker,
+				Connection xconnection, MessageMediator messageMediator) {
+			return null;
+		}
+
+		public InputObject createInputObject(Broker broker,
 				MessageMediator messageMediator) {
 			return null;
 		}
 
-		public InputObject createInputObject(Broker broker, MessageMediator messageMediator) {
-			return null;
-		}
-
-		public OutputObject createOutputObject(Broker broker, MessageMediator messageMediator) {
+		public OutputObject createOutputObject(Broker broker,
+				MessageMediator messageMediator) {
 			return null;
 		}
 	}
@@ -937,8 +1013,8 @@ public class ParserTable {
 			return "FOO";
 		}
 
-		public void setConnectionCache(InboundConnectionCache connectionCache) {
-		}
+		public void setConnectionCache(
+				InboundConnectionCache connectionCache) {}
 
 		public InboundConnectionCache getConnectionCache() {
 			return null;
@@ -948,44 +1024,43 @@ public class ParserTable {
 			return true;
 		}
 
-		public void setUseSelectThreadForConnections(boolean x) {
-		}
+		public void setUseSelectThreadForConnections(boolean x) {}
 
 		public boolean shouldUseSelectThreadForConnections() {
 			return true;
 		}
 
-		public void setUseWorkerThreadForConnections(boolean x) {
-		}
+		public void setUseWorkerThreadForConnections(boolean x) {}
 
 		public boolean shouldUseWorkerThreadForConnections() {
 			return true;
 		}
 
-		public void accept() {
-		}
+		public void accept() {}
 
-		public void close() {
-		}
+		public void close() {}
 
 		public EventHandler getEventHandler() {
 			return null;
 		}
 
-		public MessageMediator createMessageMediator(Broker xbroker, Connection xconnection) {
+		public MessageMediator createMessageMediator(Broker xbroker,
+				Connection xconnection) {
 			return null;
 		}
 
-		public MessageMediator finishCreatingMessageMediator(Broker xbroker, Connection xconnection,
+		public MessageMediator finishCreatingMessageMediator(Broker xbroker,
+				Connection xconnection, MessageMediator messageMediator) {
+			return null;
+		}
+
+		public InputObject createInputObject(Broker broker,
 				MessageMediator messageMediator) {
 			return null;
 		}
 
-		public InputObject createInputObject(Broker broker, MessageMediator messageMediator) {
-			return null;
-		}
-
-		public OutputObject createOutputObject(Broker broker, MessageMediator messageMediator) {
+		public OutputObject createOutputObject(Broker broker,
+				MessageMediator messageMediator) {
 			return null;
 		}
 	}
@@ -1012,24 +1087,27 @@ public class ParserTable {
 					Acceptor acceptor = null;
 
 					try {
-						acceptor = (Acceptor) AccessController
-								.doPrivileged(new PrivilegedExceptionAction() {
+						acceptor = (Acceptor) AccessController.doPrivileged(
+								new PrivilegedExceptionAction() {
 									public Object run()
-											throws InstantiationException, IllegalAccessException {
+											throws InstantiationException,
+											IllegalAccessException {
 										return initClass.newInstance();
 									}
 								});
 					} catch (PrivilegedActionException exc) {
 						// Unwrap the exception, as we don't care exc here
-						throw wrapper.acceptorInstantiationFailure(exc.getException(),
-								initClass.getName());
+						throw wrapper.acceptorInstantiationFailure(exc
+								.getException(), initClass.getName());
 					} catch (Exception exc) {
-						throw wrapper.acceptorInstantiationFailure(exc, initClass.getName());
+						throw wrapper.acceptorInstantiationFailure(exc,
+								initClass.getName());
 					}
 
 					return acceptor;
 				} else {
-					throw wrapper.acceptorInstantiationTypeFailure(initClass.getName());
+					throw wrapper.acceptorInstantiationTypeFailure(initClass
+							.getName());
 				}
 			}
 		};
